--- a/coffee.html
+++ b/coffee.html
@@ -5,16 +5,18 @@
  	<title></title>
  </head>
  <body>
- 	<img src="background2.jpg" width="100%" height="100%">
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="Coffee.html">Coffee & Tea</a></li>
-			<li><a href="About.html">About</a></li>
 			<li><a href="blog.html">Blog</a></li>
 			<li><a href="Contact.html">Contanct</a></li>
 		</ul>
 	</nav>
+	<a href = 'https://www.facebook.com/'><img src="facebook-new.png" width="50px" height="50px"></a>
+	<a href = 'https://www.instagram.com/'><img src="instagram-new.png" width="50px" height="50px"></a>
+	<a href = 'https://twitter.com/'><img src="twitter.png" width="50px" height="50px"></a>
+	<img src="background2.jpg" width="100%" height="100%">
 	<section id="main_product">
 		<aside id="filter">
 			<h3>Ангилах</h3>
