--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,20 @@
 	<title></title>
 </head>
 <body>
-	<img src="background2.jpg" width="100%" height="100%">
 	<h2>Contact Us</h2>
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="Coffee.html">Coffee & Tea</a></li>
-			<li><a href="About.html">About</a></li>
 			<li><a href="blog.html">Blog</a></li>
 			<li><a href="Contact.html">Contact</a></li>
 		</ul>
 	</nav>
+	<a href = 'https://www.facebook.com/'><img src="facebook-new.png" width="50px" height="50px"></a>
+	<a href = 'https://www.instagram.com/'><img src="instagram-new.png" width="50px" height="50px"></a>
+	<a href = 'https://twitter.com/'><img src="twitter.png" width="50px" height="50px"></a>
+	<img src="background2.jpg" width="100%" height="20%">
+	<h3><i>Манай хуудсаар зочилсон таньд баярлалаа</i></h3>
 	<section>
 		<h2>Манай хуудсаар зочилсон таньд баярлалаа.</h2>
 		<aside>
