--- a/blog.html
+++ b/blog.html
@@ -5,16 +5,18 @@
 	<title></title>
 </head>
 <body>
- 	<img src="background_blog.jpg" width="100%">
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="Coffee.html">Coffee & Tea</a></li>
-			<li><a href="About.html">About</a></li>
 			<li><a href="blog.html">Blog</a></li>
 			<li><a href="Contact.html">Contanct</a></li>
 		</ul>
 	</nav>
+	<a href = 'https://www.facebook.com/'><img src="facebook-new.png" width="50px" height="50px"></a>
+	<a href = 'https://www.instagram.com/'><img src="instagram-new.png" width="50px" height="50px"></a>
+	<a href = 'https://twitter.com/'><img src="twitter.png" width="50px" height="50px"></a>
+	<img src="bang.jpg" width="100%" height="20%">
 	<h2>Read our blog</h2>
 	<section>
 		<textarea id="Search">Search</textarea>
