--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
 	<title></title>
 </head>
 <body>
-	<img src="bbackground.png" width="100%" height="100%">
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="Coffee.html">Coffee & Tea</a></li>
-			<li><a href="About.html">About</a></li>
 			<li><a href="blog.html">Blog</a></li>
 			<li><a href="Contact.html">Contanct</a></li>
 		</ul>
 	</nav>
+	<a href = 'https://www.facebook.com/'><img src="facebook-new.png" width="50px" height="50px"></a>
+	<a href = 'https://www.instagram.com/'><img src="instagram-new.png" width="50px" height="50px"></a>
+	<a href = 'https://twitter.com/'><img src="twitter.png" width="50px" height="50px"></a>
+	<img src="bbackground.png" width="100%" height="100%">
 	<section id="suggest">
 		<h2>Suggesting you</h2>
 		<div id="coffee_pic">
